--- a/srl.html
+++ b/srl.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- 
     - google font link
@@ -337,7 +337,7 @@
   <!-- 
     - custom js link
   -->
-  <script srcjs/srl.js"></script>
+  <script src="js/srl.js"></script>
   
   <script>
 
