--- a/q/index.html
+++ b/q/index.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="https://iearnmo.github.io/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- 
     - google font link
