--- a/q/index.html
+++ b/q/index.html
@@ -309,7 +309,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="https://iearnmo.github.io/js/srl.js"></script>
+  <script src="../js/srl.js"></script>
 
 
   <!-- 
