--- a/q/index.html
+++ b/q/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iEarnMo - URL SHORTENER</title>
+  <title>iEarnMo - URL Shortener</title>
 
   <!-- 
     - favicon
@@ -23,7 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
+  <meta name="monetag" content="a9922254997e8f6eb750c6405fa852d6">
   <style>
       #timer {
         font-size: 24px;
@@ -31,6 +31,17 @@
         text-align: center;
 		
       }
+	  .h-captcha {
+		  text-align: center;
+		  display: inline-block;
+		  text-align: -webkit-center;
+   text-align: -moz-center;
+   text-align: -o-center;
+   text-align: -ms-center;
+	  }
+	  .h-captcha > div {
+  margin: 0 auto;
+}
     </style>
 </head>
 
@@ -46,7 +57,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="./index.html" class="logo">
-        <img src="./assets/images/logo.svg" >
+        iEarnMo
       </a>
 
       <div class="header-actions">
@@ -160,18 +171,7 @@
   <main>
     <article>
 
-      <!-- 
-        - #MOVIE DETAIL
-      -->
-    
       
-
-
-
-
-      <!-- 
-        - #TV SERIES
-      -->
 
       <section class="tv-series">
         <div class="container">
@@ -180,7 +180,17 @@
 
           <h2 class="h2 section-title">YOUR LINK IS ALMOST READY.</h2>
 <div id="timer"></div>
-  
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '320df13d8246967ee9f3032f9f43daa0',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://feignoccasionedmound.com/320df13d8246967ee9f3032f9f43daa0/invoke.js"></scr' + 'ipt>');
+</script>
+<br/>
   <div class="h-captcha" data-sitekey="acb23030-5862-4f42-a9c2-0d9287cb0e48"></div>
     <br/>
 	<script async="async" data-cfasync="false" src="//feignoccasionedmound.com/48775039fa9f833cbf6c44fe794151ba/invoke.js"></script>
@@ -297,7 +307,7 @@
 
 
 
-
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5654442,document.body||document.documentElement)</script>
  <!-- Firebase App is always required and must be first -->
    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 
