--- a/q/index.html
+++ b/q/index.html
@@ -309,11 +309,11 @@
 
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5654442,document.body||document.documentElement)</script>
  <!-- Firebase App is always required and must be first -->
-   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-
+   
     <!-- Add additional services that you want to use -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-functions.js"></script>
   <!-- 
