--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PinoyMoviesHub - Best movie collections</title>
+
+<meta name="monetag" content="a9922254997e8f6eb750c6405fa852d6">
+</head>
+<body id="top">
+</body>
+</html>
