--- a/index.html
+++ b/index.html
@@ -1,14 +1,211 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PinoyMoviesHub - Best movie collections</title>
-
+  <head>
 <meta name="monetag" content="a9922254997e8f6eb750c6405fa852d6">
-</head>
-<body id="top">
-</body>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/>
+<meta content='#0275d8' name='theme-color'/>
+<meta content='#0275d8' name='msapplication-navbutton-color'/>
+<meta content='yes' name='apple-mobile-web-app-capable'/>
+<meta content='#0275d8' name='apple-mobile-web-app-status-bar-style'/>
+
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<link href='https://www.blogger.com/openid-server.g' rel='openid.server'/>
+<link href='https://urlhubber.technicalarp.com/' rel='openid.delegate'/>
+<link href='https://urlhubber.technicalarp.com/' rel='canonical'/>
+<title>iEarnMo - Url Shortener</title>
+<meta content='Best Link Encryptor for Blogger. Features - Responsive | Attractive | Secure and Fasted URL Encryptor or URL Shortner for Blogspot.' name='description'/>
+<script type='application/ld+json'>{ "@context": "https://schema.org", "@type": "WebSite", "url": "https://urlhubber.technicalarp.com/", "potentialAction": { "@type": "SearchAction", "target": "https://urlhubber.technicalarp.com/?q={search_term}", "query-input": "required name=search_term" } }</script>
+<meta content=' YOUR KEYWORDS' name='keywords'/>
+<link href='https://urlhubber.technicalarp.com/feeds/posts/default' rel='alternate' title='Urlhubber - Url Shortener - Atom' type='application/atom+xml'/>
+<link href='https://urlhubber.technicalarp.com/feeds/posts/default?alt=rss' rel='alternate' title='Urlhubber - Url Shortener - RSS' type='application/rss+xml'/>
+<link href='https://www.blogger.com/feeds/901655603622758078/posts/default' rel='alternate' title='Urlhubber - Url Shortener - Atom' type='application/atom+xml'/>
+<link href='https://urlhubber.technicalarp.com/' hreflang='x-default' rel='alternate'/>
+<meta content='Ph' name='geo.placename'/>
+<meta content='TK Studio' name='Author'/>
+<meta content='general' name='rating'/>
+<meta content='ph' name='geo.country'/>
+<!-- [ Social Media Meta Tag ] -->
+<meta content='iEarnMo - Url Shortener' property='og:site_name'/>
+<meta content='Best Link Encryptor for Blogger. Features - Responsive | Attractive | Secure and Fasted URL Encryptor or URL Shortner for Blogspot.' name='description'/>
+<meta content='iEarnMo - Url Shortener' property='og:title'/>
+<meta content='website' property='og:type'/>
+<meta content='Best Link Encryptor for Blogger. Features - Responsive | Attractive | Secure and Fasted URL Encryptor or URL Shortner for Blogspot.' property='og:description'/>
+
+    <link rel="icon" href="../../favicon.ico">
+
+   
+    <!-- Bootstrap core CSS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet">
+  <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    />
+    <!-- Google Fonts Roboto -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	
+  </head>
+
+  <body>
+ <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <strong>iEarnMo</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Disabled</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+<!--Start of homepage-->
+ <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-4 fw-normal">Make Money By Your Own Link Encryption.</h1>
+      <p class="lead fw-normal">Simple Fast and Protected Link Encryptor for Your Website</p>
+      <a class="btn btn-outline-secondary" href="#submitentry">Short Url</a>
+    </div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  </div
+</div>
+<!--Start of Main Page Container-->
+<div class='container' style='margin-top:7%'>
+<!--header Widget homepage start-->
+<div class='text-center' id='submitentry'>
+<div class='section' id='Homepage header Area'><div class='widget Header' data-version='2' id='Header1'>
+<header itemprop='mainEntity' itemscope='itemscope' itemtype='http://schema.org/WPHeader'>
+<h2>
+<b><span itemprop='name' style='color:#000;'>iEarnMo - Url Shortener</span></b>
+</h2>
+<div id='desc'>
+<span itemprop='description' style='color:#000;'>Url Shortener for Blogger - Make Money from your own.</span>
+</div>
+</header>
+</div>
+</div>
+</div>
+<br/>
+<!--header Widget end-->
+<!--Start Of Col 8 Ads-->
+<div class='col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center'>
+<!--html Edit Widget for Ads-->
+<div class='section' id='Homepage-Above Generate Panel'><div class='widget HTML' data-version='2' id='HTML1'>
+</div></div>
+<!--End of html Widget-->
+</div>
+<div class=' text-center'>
+<!--Main Panel for Converting Links Start-->
+  <div class="card">
+              <div class="card-header">
+                Generate Link
+              </div>
+              <div class="card-body">
+             <!--Start of Form-->
+<div class='form-group'>
+<div class='input-group'>
+
+<input class='form-control' id='generateurl' pattern='(http://|https://).*' placeholder='Enter in http:// or https:// Format' required='' type='url'/>
+<span class='input-group-btn'>
+<button class='btn btn-primary primary-color primary-color-border' id='btngenerate' type='submit'>
+<i class='fa fa-shield'>
+</i>
+<strong>Generate</strong>
+</button>
+</span>
+
+</div>
+</div>
+<!--End of Form-->
+<br/>
+<div class='text-center' id='generateloading'></div>
+              </div>
+              
+            </div>
+
+</div><!--End Of Main Panel-->
+</div>
+<br/>
+<div class='col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center'>
+<!--Below Ad Code-->
+<div class='section' id='Homepage - Below Generate Panel'><div class='widget HTML' data-version='2' id='HTML2'>
+<div class='content'>
+Place Ad Code but not too big use responsive Ad Code Below Generate Box
+</div>
+</div></div>
+<!--End of Widget Below Ads-->
+</div><!--End Of Col-8 Ads Below-->
+</div><!--End Of Main Page Container-->
+ 
+
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2023 made with ❤️ by
+    <a class="text-dark" href="#">TK Studio</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+
+  <!-- Add additional services that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-functions.js"></script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script src="js/script.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
+
